[package]
name = "pygraph"
version = "0.1.0"
edition = "2021"
authors = ["Felix KLeine Bösing <felix.boesing@t-online.de>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name="graphlib"
crate-type = ["cdylib"]
path= "pygraph/rust/lib.rs"


[dependencies]
pyo3 = { version = "0.19.1", features = ["extension-module", "auto-initialize"] }
